welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:2: error: identifier expected but integer literal found.
	for(i<- 0 to nums:Array.length-1)
                                       ^indexOfMaxValue:6: error: ')' expected but '}' found.
}
^